# kaenguru_benchmark

./: LICENSE  README.md  check_dataset.py  compare_runs.ipynb  config.yaml  dashboard.py  eval_run.py  evaluate_humans.ipynb  evaluate_results.ipynb  graphics_extraction_plan.md  inspect_pdf.py  inspect_qt.py  inspect_question.ipynb  models.json  pdf_extraction_improvement.md  pyproject.toml  requirements.txt  score_utils.py  simple_eval.py
console/: __init__.py  columns.py  dashboard.py  eta.py  metrics.py
dashboard/: __init__.py  aggregations.py  analysis.py  analysis_schemas.py  data_index.py  dataset_access.py  human_baseline.py  human_compare.py  human_stats.py  schemas.py  server.py  utils.py
llm_inference/: llm_inference.py  shorten_questions.py
llm_inference/prompts/: no_reasoning_prompt.md  reasoning_prompt.md
pdf_extract/: __init__.py  image_extractor.py  metadata.py  pdf_extraction.py
pdf_ocr/: mistral_ocr.py
pdf_preprocessing/: pdf_graphics_extractor.py
process_markdown/: md_to_mmmu.py
tests/: test_aggregator.py  test_eta.py  test_eval_run.py  test_human_baseline.py  test_retry_missing_answers.py
tests/fixtures/human_baseline/: human_baseline_2008.json
tools/: __init__.py  retry_missing_answers.py
utils/: logger_setup.py
web/static/css/: base.css  theme.css
web/static/js/: alpine.min.js  app.js  charts.js  htmx.min.js
web/templates/: analysis.html  base.html  compare.html  humans.html  overview.html  run_detail.html
web/templates/partials/: overview_section.html  run_card.html
