[project]
name = "kaenguru-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=16.0",
    "requests>=2.32",
    "httpx>=0.27",
    "pillow>=10.3",
    "tqdm>=4.66",
    "pytest>=8.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "orjson>=3.10",
    "humanize>=4.9",
    "cachetools>=5.3",
    "rich>=13.7",
    "pyqt5>=5.15.11",
    "jupyter>=1.1.1",
    "python-multipart>=0.0.20",
    "matplotlib>=3.10.6",
    "scipy>=1.16.2",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
